<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:background="@color/lightblack"
              android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:background="@color/lightblack"
        android:gravity="center_vertical">

        <ImageButton
            android:id="@+id/button_back"
            android:layout_width="44dp"
            android:onClick="onClick"
            android:layout_height="match_parent"
            android:background="@drawable/selector0"
            android:src="@mipmap/button_back"/>

        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/private_album"
            android:textColor="@color/white"
            android:textSize="20sp"/>

        <CheckBox
            android:id="@+id/checkbox_select_all"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:onClick="onClick"
            android:layout_marginEnd="15dp"
            android:button="@null"
            android:clickable="true"
            android:text="@string/select_all"
            android:textColor="@color/white"/>
    </RelativeLayout>


    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/tv_no_picture"
            android:layout_width="wrap_content"
            android:text="@string/no_picture"
            android:visibility="gone"
            android:textSize="18sp"
            android:textColor="@color/greytext"
            android:layout_gravity="center"
            android:layout_height="wrap_content"/>

        <GridView
            android:id="@+id/album_GridView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:horizontalSpacing="2dp"
            android:numColumns="4"
            android:verticalSpacing="2dp"/>

        <Button
            android:id="@+id/button_min"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_gravity="bottom"
            android:layout_marginBottom="10dp"
            android:layout_marginEnd="70dp"
            android:onClick="onClick"
            android:layout_marginStart="70dp"
            android:textSize="16sp"
            android:text="@string/decrypt"/>
    </FrameLayout>

</LinearLayout>