<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="5dp"
        android:background="@drawable/background_dialog_add_contacts"
        android:orientation="vertical">

        <TextView
            android:id="@+id/dialog_add_contacts_choose"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_margin="2dp"
            android:gravity="center"
            android:text="@string/dialog_add_choose"
            android:textColor="@color/colorAccent"
            android:textSize="18sp"
            android:textStyle="bold" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:background="@color/dialog_line_color" />

        <TextView
            android:id="@+id/dialog_add_contacts_create"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_margin="2dp"
            android:gravity="center"
            android:text="@string/dialog_add_create"
            android:textColor="@color/colorAccent"
            android:textSize="18sp"
            android:textStyle="bold" />

    </LinearLayout>

    <TextView
        android:id="@+id/dialog_add_contacts_cancel"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_margin="5dp"
        android:background="@drawable/background_dialog_add_contacts"
        android:gravity="center"
        android:text="@string/dialog_add_cancel"
        android:textColor="@color/colorAccent"
        android:textSize="18sp"
        android:textStyle="bold" />
</LinearLayout>